Feature/cdr 1037 spring boot3 (#1174)
* migrate to sporing boot 3

* downgrade jbx implementation

* disable auth

* update auth

* exclude commons-logging

* match trailing slash

* update basic auth

* code cleanup

* fix: trigger CircleCI

* fix: trigger CircleCI

* update changelog

* code cleanup

---------

Co-authored-by: vladislavploaia <vladislav.ploaia.ext@vitagroup.ag>