@@ -17,12 +17,14 @@
  */
 package org.ehrbase.application.config.security;
 
+import static org.ehrbase.application.config.security.SecurityProperties.ADMIN;
+import static org.springframework.security.config.Customizer.withDefaults;
+
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import javax.annotation.PostConstruct;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -30,17 +32,19 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.actuate.autoconfigure.endpoint.web.WebEndpointProperties;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.boot.autoconfigure.security.oauth2.resource.OAuth2ResourceServerProperties;
+import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.core.convert.converter.Converter;
 import org.springframework.security.authentication.AbstractAuthenticationToken;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
+import org.springframework.security.config.annotation.web.configurers.AuthorizeHttpRequestsConfigurer;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.oauth2.jwt.Jwt;
 import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
-import org.springframework.security.oauth2.server.resource.web.BearerTokenAuthenticationFilter;
+import org.springframework.security.oauth2.server.resource.web.authentication.BearerTokenAuthenticationFilter;
+import org.springframework.security.web.SecurityFilterChain;
 
 /**
  * {@link Configuration} for OAuth2 authentication.
@@ -52,7 +56,7 @@ import org.springframework.security.oauth2.server.resource.web.BearerTokenAuthen
 @Configuration
 @EnableWebSecurity
 @ConditionalOnProperty(prefix = "security", name = "auth-type", havingValue = "oauth")
-public class OAuth2SecurityConfiguration extends WebSecurityConfigurerAdapter {
+public class OAuth2SecurityConfiguration {
 
     private static final String PUBLIC = "PUBLIC";
     private static final String PRIVATE = "PRIVATE";
@@ -87,48 +91,43 @@ public class OAuth2SecurityConfiguration extends WebSecurityConfigurerAdapter {
         logger.debug("Using admin role: {}", securityProperties.getOauth2AdminRole());
     }
 
-    @Override
-    protected void configure(HttpSecurity http) throws Exception {
+    @Bean
+    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         String userRole = securityProperties.getOauth2UserRole();
         String adminRole = securityProperties.getOauth2AdminRole();
 
         http.addFilterBefore(new SecurityFilter(), BearerTokenAuthenticationFilter.class);
 
-        // @formatter:off
-        var registry = http.cors()
-                .and()
-                .authorizeRequests()
-                .antMatchers("/rest/admin/**")
-                .hasRole(adminRole)
-                .antMatchers("/swagger-ui/**", "/v3/api-docs/**")
-                .permitAll();
+        http.cors(withDefaults())
+                .authorizeHttpRequests(auth -> {
+                    AuthorizeHttpRequestsConfigurer<HttpSecurity>.AuthorizationManagerRequestMatcherRegistry registry =
+                            auth.requestMatchers("/rest/admin/**", "/management/**")
+                                    .hasRole(ADMIN);
 
-        var managementAuthorizedUrl = registry.and()
-                .authorizeRequests()
-                .antMatchers(this.managementWebEndpointProperties.getBasePath() + "/**");
+                    var managementAuthorizedUrl =
+                            registry.requestMatchers(this.managementWebEndpointProperties.getBasePath() + "/**");
 
-        switch (managementEndpointsAccessType) {
-            case ADMIN_ONLY ->
-            // management endpoints are locked behind an authorization
-            // and are only available for users with the admin role
-            managementAuthorizedUrl.hasRole(adminRole);
-            case PRIVATE ->
-            // management endpoints are locked behind an authorization, but are available to any role
-            managementAuthorizedUrl.hasAnyRole(adminRole, userRole, PROFILE_SCOPE);
-            case PUBLIC ->
-            // management endpoints can be accessed without an authorization
-            managementAuthorizedUrl.permitAll();
-            default -> throw new IllegalStateException(String.format(
-                    "Unexpected management endpoints access control type %s", managementEndpointsAccessType));
-        }
+                    switch (managementEndpointsAccessType) {
+                        case ADMIN_ONLY ->
+                        // management endpoints are locked behind an authorization
+                        // and are only available for users with the admin role
+                        managementAuthorizedUrl.hasRole(adminRole);
+                        case PRIVATE ->
+                        // management endpoints are locked behind an authorization, but are available to any role
+                        managementAuthorizedUrl.hasAnyRole(adminRole, userRole, PROFILE_SCOPE);
+                        case PUBLIC ->
+                        // management endpoints can be accessed without an authorization
+                        managementAuthorizedUrl.permitAll();
+                        default -> throw new IllegalStateException(String.format(
+                                "Unexpected management endpoints access control type %s",
+                                managementEndpointsAccessType));
+                    }
 
-        registry.anyRequest()
-                .hasAnyRole(adminRole, userRole, PROFILE_SCOPE)
-                .and()
-                .oauth2ResourceServer()
-                .jwt()
-                .jwtAuthenticationConverter(getJwtAuthenticationConverter());
-        // @formatter:on
+                    registry.anyRequest().hasAnyRole(adminRole, userRole, PROFILE_SCOPE);
+                })
+                .oauth2ResourceServer(o -> o.jwt(j -> j.jwtAuthenticationConverter(getJwtAuthenticationConverter())));
+
+        return http.build();
     }
 
     // Converter creates list of "ROLE_*" (upper case) authorities for each "realm access" role
@@ -146,7 +145,7 @@ public class OAuth2SecurityConfiguration extends WebSecurityConfigurerAdapter {
                         .stream()
                                 .map(roleName -> "ROLE_" + roleName.toUpperCase())
                                 .map(SimpleGrantedAuthority::new)
-                                .collect(Collectors.toList()));
+                                .toList());
             }
 
             if (jwt.getClaims().containsKey("scope")) {
@@ -154,7 +153,7 @@ public class OAuth2SecurityConfiguration extends WebSecurityConfigurerAdapter {
                         Arrays.stream(jwt.getClaims().get("scope").toString().split(" "))
                                 .map(roleName -> "ROLE_" + roleName.toUpperCase())
                                 .map(SimpleGrantedAuthority::new)
-                                .collect(Collectors.toList()));
+                                .toList());
             }
             return authority;
         });
